# QuantAgent

./: .env.example  .gitignore  .gitmodules  ACCEPTANCE_RULES.md  AGENTS.md  ARCHITECTURE_AUDIT.md  BASELINE_TRUST_CLASSIFICATION.md  BOOK_CHURN_CONTROL_EXPERIMENT.md  CODEBASE_CLEANUP_REPORT.md  DEAD_CODE_AUDIT.md  DELETION_CANDIDATE_MANIFEST.csv  DUAL_TRACK_FACTOR_BATCH_PLAN.md  DUAL_TRACK_RESULT_H015.md  DUAL_TURNOVER_STRATEGY_PROTOCOL.md  EVALUATION_PROTOCOL_V2.md  EVALUATOR_ORDER_DEDUP_BUG.md  EVALUATOR_VALIDITY_AUDIT_IC016.md  EXP008_CORRECTED_INC_E1.md  EXP010_CORRECTED_INC_E1.md  EXP011_CORRECTED_INC_E1.md  EXPERIMENT_HISTORY_SUMMARY.md  EXPERIMENT_LEDGER.md  FACTOR_CANDIDATE_LEDGER.csv  FACTOR_CANDIDATE_LEDGER_batch3.csv  FACTOR_CANDIDATE_LEDGER_fundamental.csv  FORWARD_SCORING_TIMER_AUDIT.md  FRESH_HOLDOUT_FREEZE_MANIFEST.md  H009_DRAWDOWN_REGIME_OVERLAY.md  HOLDOUT_ARTIFACT_CENSUS.csv  HOLDOUT_CONTAMINATION_AUDIT.md  HYPOTHESIS_REGISTRY.md  IDEA_QUEUE.md  LICENSE  LONG_SLEEVE_DIAGNOSTIC.md  MODEL_FLOW_MAP.md  OUTPUT_ARTIFACT_AUDIT.md  P4_QUARANTINE_GUARD_IMPLEMENTATION_PLAN.md  PBO_DSR_ANALYSIS.md  PBO_DSR_INPUT_CENSUS.md  PBO_DSR_INPUT_VALIDATION.md  (+12 more)
.claude/: settings.local.json
configs/: ai_quant_os_v2.yaml  data_providers.v6.yaml  example_search_space.json  feature_registry.json  legacy_cli_manifest.json  model.v6.yaml  optimizer.default.yaml  preregistered_evals.json  production_blend.json  quarantined_windows.json  replay_scenarios.v6.yaml  risk_limits.v6.yaml  strategy.default.yaml  v4.default.yaml  v4.local.example.yaml  v4.paper.example.yaml  v5.default.yaml  v6.default.yaml  v7.default.yaml  v7.mock.yaml  v7.paper.yaml  v7.realdata.yaml  v7.train.yaml  v7_large_universe_example.txt
docs/: V6_Agent证据系统.md  V6_总览.md  V6_数据与PIT特征.md  V6_模型训练与验证.md  V6_生产可信度与审计.md  V6_组合优化与风险控制.md  V6_虚拟交易与历史回放.md  V6_运维与故障演练.md  V6_验收标准.md  V7_PIT_data_contract.md  V7_PIT数据与财务特征.md  V7_hardening_migration.md  V7_live_readiness_gates.md  V7_realdata_training_pipeline.md  V7_training_dataset_schema.md  V7_算法风控回测与验收.md  V7_系统架构与Agent接口.md  V7_证据摄取与交易规则.md  ai_quant_os_v2.md  factor_library_alpha101.md  factor_library_cicc_ashare.md  math_optimization_layer.md  production_ai_quant_blueprint.md  quant_ui_code_map.md  quant_ui_completion_matrix.md  quant_ui_data_schema.md  quant_ui_design_brief.md  quant_ui_runbook.md  quantagent_governance_architecture.md  quantagent_v3_factor_centric_design.md  sota_upgrade_v3.md  stage_1_foundation.md  v4_agent_views.md  v4_architecture.md  v4_data_and_feature_store.md  v4_execution_qmt.md  v4_model_training.md  v4_portfolio_backtest.md  v4_roadmap.md  v5_design.md  (+8 more)
metric/: 一叉定生死.txt  主力吸筹.txt  主力资金流入.txt  分时主图_AI多因子做T.txt  分时雷达_AI多因子做T.txt  成交量复合炮.txt  操盘线压力.txt
scripts/: aggregate_v10_ensemble.py  append_live_llm_picks.py  audit_markdown_references.py  audit_val_fund_pit.py  augment_training_dataset.py  auto_repair_20260715.sh  baseline_protocol.py  batch_chain_pools.py  benchmark_alpha101.py  board_chase_eval.py  build_combined_canonical.py  build_executable_labels_dataset.py  build_horizon_assignment.py  build_intraday_minute_panel.py  build_intraday_panel_2026.py  build_intraday_panel_full.py  build_security_master_h028.py  build_tickflow_fin_features.py  build_v88_dataset.py  build_valuation_fundamental_features.py  calibrate_predictions.py  catchup_panel_chunked.py  catchup_supervisor.sh  chain_oos_validation.py  collect_eastmoney_fundflow_minute.py  collect_tickflow_depth.py  compare_boardfix_baseline.py  coverage_guard.sh  daily_health_check.sh  daily_sentiment_brief.py  data_manager_transfer.py  discovered_factor_composite_test.py  dot_engine_forward_backtest.py  dot_overlay_backtest.py  enrich_market_panel.py  enrich_market_panel_boardfix.py  enrich_panel_fundamentals.py  ensemble_weight_search.py  eval_fundflow_daily_factor.py  evaluate_discovered_factors.py  (+163 more)
services/: __init__.py
tests/: test_agent_views_v4.py  test_agents_sota.py  test_ai_quant_os_v2.py  test_akshare_flow_provider.py  test_akshare_index_provider.py  test_akshare_macro_provider.py  test_alpha101.py  test_alpha181.py  test_ashare_rules_v4.py  test_backtest_engine.py  test_backtest_v4.py  test_gpu_smoke.py  (+113 more)
(+787 files in other folders)
