[project]
name = "quantagent"
version = "0.4.1"
description = "Governed A-share quantitative research, backtesting, and paper-trading platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<2.3",
  "pandas>=2.2,<3",
  "polars>=1.0",
  "pyarrow>=16.0",
  "scipy>=1.13",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
  "tabulate>=0.9",
]

[project.optional-dependencies]
data = [
  "akshare",
  "tushare",
]
training = [
  "torch>=2.3",
  "transformers>=4.43",
  "scikit-learn>=1.5",
]
research = [
  "pyqlib>=0.9.6",
  "vectorbt>=0.26",
]
optimization = [
  "cvxpy>=1.4",
]
web = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "scikit-learn>=1.5",
  "fastapi>=0.115",
  "httpx>=0.27",
]
all = [
  "akshare",
  "tushare",
  "torch>=2.3",
  "transformers>=4.43",
  "scikit-learn>=1.5",
  "pyqlib>=0.9.6",
  "vectorbt>=0.26",
  "cvxpy>=1.4",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[project.scripts]
quantagent = "quantagent.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
